RESOLVED FIXED77288
REGRESSION (r104303): Clicking inline video controls gives the video a focus ring
https://bugs.webkit.org/show_bug.cgi?id=77288
Summary REGRESSION (r104303): Clicking inline video controls gives the video a focus ...
mitz
Reported 2012-01-28 14:14:38 PST
To reproduce: Navigate to the URL. When the video loads, click the play button. Result: The video gets a focus ring around it, but it shouldn’t. Notes: This happens with many videos at apple.com. Caused by <http://trac.webkit.org/r104303>, the fix for bug 75650.
Attachments
Patch (4.67 KB, patch)
2012-02-03 12:53 PST, Jer Noble
darin: review+
webkit.review.bot: commit-queue-
mitz
Comment 1 2012-01-28 14:15:58 PST
Jer Noble
Comment 2 2012-02-02 16:50:25 PST
I believe the actual regression for this is <http://trac.webkit.org/changeset/95381>, the fix for bug #67190. In that bug, HTMLMediaElements were explicitly made focusable. The fix for bug #75650 unmasked this behavior.
Jer Noble
Comment 3 2012-02-02 16:51:38 PST
It looks like we can make the HTMLMediaElement non-mouse focusable without breaking keyboard focus (ala bug #67190) by overriding Node::isMouseFocusable().
Jer Noble
Comment 4 2012-02-03 12:53:15 PST
WebKit Review Bot
Comment 5 2012-02-06 16:34:31 PST
Comment on attachment 125387 [details] Patch Rejecting attachment 125387 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: Core/html/HTMLMediaElement.h Hunk #1 FAILED at 336. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/html/HTMLMediaElement.h.rej patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/media/video-mouse-focus-expected.txt patching file LayoutTests/media/video-mouse-focus.html Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Darin Adler']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output: http://queues.webkit.org/results/11442046
Jer Noble
Comment 6 2012-02-06 16:37:42 PST
Doing this one manually...
Jer Noble
Comment 7 2012-02-06 16:52:19 PST
Note You need to log in before you can comment on or make changes to this bug.