REGRESSION (r104303): Clicking inline video controls gives the video a focus ring https://bugs.webkit.org/show_bug.cgi?id=77288

Reviewed by Darin Adler.

Source/WebCore:

Test: media/video-mouse-focus.html

Do not allow media elements to be focused by mouse click by overriding isMouseFocusable
and returning false.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::isMouseFocusable):
* html/HTMLMediaElement.h:

LayoutTests:

* media/video-mouse-focus-expected.txt: Added.
* media/video-mouse-focus.html: Added.

Canonical link: https://commits.webkit.org/94794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106876 268f45cc-cd09-0410-ab3c-d52691b4dbfc